--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ defaults:
     values:
       layout: "workshop"
   - scope:
+      path: "/jayme"
+    values:
+      layout: "jayme"      
+  - scope:
       path: ""
     values:
       layout: "default"
