--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ theme: jekyll-theme-midnight
 title: Dead Physicists Society
 description: 
 
-jayme3title: IV Escola de Física Jayme Tiomno
+jayme3title: III Escola de Física Jayme Tiomno
+jayme4title: IV Escola de Física Jayme Tiomno
 
 github:
   is_project_page: false
