--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-midnight
 title: Dead Physicists Society
 description: 
 
-jayme3title: III Escola de Física Jayme Tiomno
+jayme3title: III Escola Jayme Tiomno de Física Teórica
 jayme4title: IV Escola de Física Jayme Tiomno
 
 github:
