--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-midnight
-title: Dead Physicists Society
+title: 
 description: 
 
 jayme3title: III Escola Jayme Tiomno de Física Teórica
