Tentando acertar as páginas dos anos anteriores
Tô tentando arrumar o problema das páginas dos anos anteriores só mostrarem o conteúdo do ano atual. Tava mexendo no meu site e lembrei desse problema

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,11 @@ defaults:
     values:
       layout: "workshop6"
   - scope:
+      path: "jayme/2021"
+      type: "pages"
+    values:
+      layout: "jayme3"
+  - scope:
       path: "jayme"
       type: "pages"
     values:
