Corrigindo exibição dos sites dos anos anteriores
Tô acertando o layout dos anos anteriores. Isso deve mostrar o menu de navegação certo

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,16 @@ defaults:
     values:
       layout: "jayme3"
   - scope:
+      path: "jayme/2022"
+      type: "pages"
+    values:
+      layout: "jayme4"
+  - scope:
+      path: "jayme/2023"
+      type: "pages"
+    values:
+      layout: "jayme5"
+  - scope:
       path: "jayme"
       type: "pages"
     values:
